Ingest query parameters in the lambda function when using non proxy lambda integration
